[tool.poetry]
name = "ccnpy"
version = "0.1.0"
description = "A pure python implementation of the CCNx client."
authors = ["Marc Mosko <marc@mosko.org>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.1"
jsbeautifier = "^1.15.1"
crc32c = "^2.7.1"
pytest = "^8.3.3"
coverage = "^7.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
